--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         <!-- Contents -->
         <main class="content-main">
+            <!-- 본문이 Include 되는 구조 -->
             <div data-include-path="/pages/SA/SA0101.html"></div>
         </main>
 
