--- a/guide/elements.html
+++ b/guide/elements.html
@@ -51,12 +51,11 @@
 
     <!-- Load Scripts -->
     <script src="../resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="../resources/lib/kendo/js/jszip.min.js"></script>
     <script src="../resources/lib/kendo/js/kendo.all.min.js"></script>
     <!-- Guide Script -->
     <script type="text/javascript" src="/guide/highlight/highlight.pack.js"></script>
     <!-- Publish Script -->
-    <script src="../resources/js/index.js"></script>
+    <script src="../resources/js/common.js"></script>
 
 
 </body>
