--- a/guide/tableGuide.html
+++ b/guide/tableGuide.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="g-example-foot">
                         <pre><code class="html">
-                        </code></pre>   
+                        </code></pre>
                     </div>
                 </div>
 
@@ -62,17 +62,16 @@
                 </div>
 
 
-               
+
             </div>
         </section>
     </div>
     <!-- Load Scripts -->
     <script src="../resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="../resources/lib/kendo/js/jszip.min.js"></script>
     <script src="../resources/lib/kendo/js/kendo.all.min.js"></script>
     <!-- Guide Script -->
     <script type="text/javascript" src="./highlight/highlight.pack.js"></script>
     <!-- Publish Script -->
-    <script src="../resources/js/index.js"></script>
+    <script src="../resources/js/common.js"></script>
 </body>
 </html>
