--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,9 @@
     <title>Document</title>
     <!-- Load Styles -->
     <link rel="stylesheet" href="./resources/lib/kendo/styles/kendo.common.min.css">
-    <!-- <link rel="stylesheet" href="./resources/lib/kendo/styles/kendo.default.min.css"> -->
     <link rel="stylesheet" href="./resources/css/index.css">
 </head>
+
 <body>
     <div class="wrap">
         <!-- Header Include -->
@@ -25,9 +26,9 @@
 
     <!-- Load Scripts -->
     <script src="./resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="./resources/lib/kendo/js/jszip.min.js"></script>
     <script src="./resources/lib/kendo/js/kendo.all.min.js"></script>
-    <script src="./resources/js/index.js"></script>
- 
+    <script src="./resources/js/common.js"></script>
+
 </body>
+
 </html>
