--- a/index.html
+++ b/index.html
@@ -6,25 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Document</title>
     <!-- Load Styles -->
-    <link rel="stylesheet" href="/resources/css/index.css">
+    <link rel="stylesheet" href="./resources/css/index.css">
 </head>
 <body>
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="/pages/layout/header.html"></div>
+        <div data-include-path="./pages/layout/header.html"></div>
 
         <!-- Contents -->
         <main class="content-main">
-            <div data-include-path="/pages/SA/SA0101.html"></div>
+            <div data-include-path="./pages/SA/SA0101.html"></div>
         </main>
 
-
-        <!-- Header Include -->
-        <div data-include-path="/pages/layout/footer.html"></div>
     </div>
 
     <!-- Load Scripts -->
-    <script src="/resources/js/jquery.min.js"></script>
-    <script src="/resources/js/index.js"></script>
+    <script src="./resources/lib/kendo/js/jquery.min.js"></script>
+    <script src="./resources/js/common.js"></script>
 </body>
 </html>
