인덱스 접근시 화면 리스트로 이동

--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv='refresh' content='0;url=/guide/list.html'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Load Styles -->
-    <link rel="stylesheet" href="./resources/css/index.css">
 </head>
-
 <body>
-    <div class="wrap">
-        <!-- Header Include -->
-        <div data-include-path="./pages/layout/header.html"></div>
-
-        <!-- Contents -->
-        <main class="content-main">
-
-        </main>
-
-    </div>
-
-    <!-- Load Scripts -->
-    <script src="./resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="./resources/js/common.js"></script>
+    <!-- 리스트 페이지로 이동 -->
 </body>
-
 </html>
