--- a/pages/sample.html
+++ b/pages/sample.html
@@ -15,8 +15,8 @@
 
     </div>
 
-    <!-- Load Scripts -->
-    <script src="/resources/lib/kendo/js/jquery.min.js"></script>
+    <!-- Default Script Include -->
+    <div data-include-path="/pages/layout/script.html"></div>
     <script src="/resources/js/common.js"></script>
 </body>
 </html>
