--- a/pages/SA/SA0101.html
+++ b/pages/SA/SA0101.html
@@ -59,6 +59,7 @@
                             <div class="form-group">
                                 <span class="label">검색기간</span>
                                 <div class="form-set">
+                                    <input data-role="dateinput"/> 
                                     <input type="text" class="datepicker h-input sm" value="2021/06/02">
                                     <span class="bar">~</span>
                                     <input type="text" class="datepicker h-input sm" value="2021/06/04">
