리스트로 이동하기 링크 추가

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv='refresh' content='0;url=/guide/list.html'>
+    <!-- <meta http-equiv='refresh' content='0;url=/guide/list.html'> -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     <!-- 리스트 페이지로 이동 -->
-    이동용 임시 페이지입니다.
+    <a href="/guide/list.html">리스트로 이동하기</a>
 </body>
 </html>
