--- a/guide/elements.html
+++ b/guide/elements.html
@@ -44,7 +44,7 @@
             </div>
             <div class="g_content">
                 <!-- <iframe src="/guide/buttonGuide.html" frameborder="0" class="ifr_con" name="_iframe"></iframe> -->
-                <iframe src="/guide/tableGuide.html" frameborder="0" class="ifr_con" name="_iframe"></iframe>
+                <iframe src="./guide/tableGuide.html" frameborder="0" class="ifr_con" name="_iframe"></iframe>
             </div>
         </div>
     </div><!--// .wrapper-->
