--- a/guide/buttonGuide.html
+++ b/guide/buttonGuide.html
@@ -101,7 +101,7 @@
     <script src="../resources/lib/kendo/js/jquery.min.js"></script>
     <script src="../resources/lib/kendo/js/kendo.all.min.js"></script>
     <!-- Guide Script -->
-    <script type="text/javascript" src="/guide/highlight/highlight.pack.js"></script>
+    <script type="text/javascript" src="./guide/highlight/highlight.pack.js"></script>
     <!-- Publish Script -->
     <script src="../resources/js/common.js"></script>
 
