--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv='refresh' content='0;url=/guide/list.html'> -->
+    <meta http-equiv='refresh' content='0;url=./guide/list.html'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>효성 FMS</title>
 </head>
 <body>
     <!-- 리스트 페이지로 이동 -->
-    <a href="/guide/list.html">리스트로 이동하기</a>
 </body>
 </html>
