--- a/pages/SA/SA0101.html
+++ b/pages/SA/SA0101.html
@@ -1,14 +1,23 @@
-<!-- 07서비스 품질 - 01상담정보관리 - 01조회 -->
-<div data-include-path="/pages/layout/doctype.html"></div>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Document</title>
+    <!-- Load Styles -->
+    <!-- <link rel="stylesheet" href="../../resources/lib/kendo/styles/kendo.common.min.css"> -->
+    <link rel="stylesheet" href="../../resources/css/index.css">
+</head>
 
 <body>
     <div class="wrap">
         <!-- Header Include -->
-        <div data-include-path="/pages/layout/header.html"></div>
+        <div data-include-path="../layout/header.html"></div>
 
         <div id="container">
             <!-- Header Include -->
-            <div data-include-path="/pages/layout/lnb.html"></div>
+            <div data-include-path="../layout/lnb.html"></div>
             <!-- Contents -->
             <main class="contents-wrap">
 
@@ -59,7 +68,7 @@
                             <div class="form-group">
                                 <span class="label">검색기간</span>
                                 <div class="form-set">
-                                    <input data-role="dateinput"/> 
+                                    <input data-role="dateinput"/>
                                     <input type="text" class="datepicker h-input sm" value="2021/06/02">
                                     <span class="bar">~</span>
                                     <input type="text" class="datepicker h-input sm" value="2021/06/04">
@@ -193,9 +202,9 @@
     </div>
 
     <!-- Default Script Include -->
-    <script src="/resources/lib/kendo/js/jquery.min.js"></script>
-    <script src="/resources/lib/kendo/js/kendo.all.min.js"></script>
-    <script src="/resources/js/common.js"></script>
+    <script src="../../resources/lib/kendo/js/jquery.min.js"></script>
+    <script src="../../resources/lib/kendo/js/kendo.all.min.js"></script>
+    <script src="../../resources/js/common.js"></script>
 </body>
 
 </html>
