Index 페이지 수정

--- a/guide/list.html
+++ b/guide/list.html
@@ -50,7 +50,7 @@
     </header>
     <div class="g_container" style="flex-direction: column; padding: 0 20px;">
         <div class="hgroup">
-            <h1> HTML 목록 | 효성 </h1>
+            <h1> HTML 목록 | 효성 FMS B System </h1>
             <ul class="state">
                 <li class="progress"><strong>진척률</strong><span class="no">0</span><span class="unit">%</span></li>
                 <li class="total"><strong>총본수</strong><span class="no">0</span></li>
@@ -79,6 +79,13 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class="">
+                    <td>Base Template</td>
+                    <td class="coder">방휘랑</td>
+                    <td class="date"></td>
+                    <td class="state" data-state="done"></td>
+                    <td></td>
+                </tr>
                 <tr class="">
                     <td class="sbid"><span class="pc">SA0101</span><span class="mo"></span></td>
                     <td class="coder">주진희</td>
