리스트 수정

--- a/guide/list.html
+++ b/guide/list.html
@@ -63,14 +63,16 @@
         </div>
         <table class="tbl_guide">
             <colgroup>
+                <col width="30%">
                 <col>
                 <col width="10%">
                 <col width="10%">
                 <col width="10%">
-                <col width="20%">
+                <col width="10%">
             </colgroup>
             <thead>
                 <tr>
+                    <th scope="col">화면명</th>
                     <th scope="col">경로</th>
                     <th scope="col">작업자</th>
                     <th scope="col">작업일</th>
@@ -80,6 +82,7 @@
             </thead>
             <tbody>
                 <tr class="">
+                    <td></td>
                     <td>Base Template</td>
                     <td class="coder">방휘랑</td>
                     <td class="date"></td>
@@ -87,14 +90,8 @@
                     <td></td>
                 </tr>
                 <tr class="">
+                    <td>07서비스품질_01상담정보관리_01조회</td>
                     <td class="sbid"><span class="pc">SA0101</span><span class="mo"></span></td>
-                    <td class="coder">주진희</td>
-                    <td class="date"></td>
-                    <td class="state" data-state="done"></td>
-                    <td></td>
-                </tr>
-                <tr class="">
-                    <td class="sbid"><span class="pc"></span><span class="mo"></span></td>
                     <td class="coder">주진희</td>
                     <td class="date"></td>
                     <td class="state" data-state="done"></td>
