--- a/guide/list.html
+++ b/guide/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML 목록</title>
+    <title>효성 B System Working Page List</title>
     <!-- Guide Styles -->
     <link rel="stylesheet" type="text/css" href="./css/guide.css" />
 
@@ -45,7 +45,7 @@
         <ul>
             <!-- <li><h1><a  href="./list.html">효성</a></h1></li> -->
             <li><a href="./list.html">List</a></li>
-            <li><a href="./elements.html">Elements</a></li>
+            <li><a href="./elements.html?elements=button">Elements</a></li>
         </ul>
     </header>
     <div class="g_container" style="flex-direction: column; padding: 0 20px;">
